# NeuralNetwork

./: .gitignore  CMakeLists.txt  main.cpp
src/: IActivation.hpp  IActivationFullConnection.hpp  ILayer.hpp  ILoss.hpp  activation.hpp  layer.cpp  layer.hpp  loss.hpp  meanSquared.cpp  meanSquared.hpp  neuralNetwork.cpp  neuralNetwork.hpp  sigmoid.cpp  sigmoid.hpp
src/activation/: sigmoid.cpp  sigmoid.hpp  softMax.cpp  softMax.hpp
src/layer/: DenseLayer.cpp  DenseLayer.hpp  SoftmaxLayer.cpp  SoftmaxLayer.hpp
src/loss/: crossEntropy.cpp  crossEntropy.hpp  meanSquared.cpp  meanSquared.hpp
